GET, POST, DELETE methods implemented
